--- a/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
+++ b/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
@@ -155,7 +155,7 @@
            <a style="padding-left:10px" href="assets/DataFiles/ExampleFileDataset/SalivaryCystatinsDatasetWithParameters.zip" download="SalivaryCystatinsDatasetWithParameters.zip">Download All (zip)</a>
        </div>
        <p style="font-size: 15px;font-family: sans-serif;"><b>Description:</b> HCD fragmentation mode has been used to identify salivary cystatin proteoforms from top-down MS/MS dataset using Human saliva samples.</p>
-       <p style="font-size: 15px;font-family: sans-serif;"> <b>Publication:</b> Salivary cystatins: exploring new post-translational modifications and polymorphisms by top-down high-resolution mass spectrometry. Journal of proteome research.<a href="https://pubs.acs.org/doi/10.1021/acs.jproteome.7b00567"> (link)</a></p>
+       <p style="font-size: 15px;font-family: sans-serif;"> <b>Publication:</b> Manconi B, Liori B, Cabras T, Vincenzoni F, Iavarone F, Castagnola M, Messana I, Olianas A. Salivary cystatins: exploring new post-translational modifications and polymorphisms by top-down high-resolution mass spectrometry. Journal of proteome research. 2017 Nov 3;16(11):4196-207<a href="https://pubs.acs.org/doi/10.1021/acs.jproteome.7b00567"> (link)</a></p>
        <table class="table table-hover">
                <thead>
                    <tr>
