--- a/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
+++ b/Code/PerceptronFrontEnd/src/app/bug/bug.component.html
@@ -10,7 +10,7 @@ class="ui form">
           <img  style="margin: 0 auto;" src="assets/images/bug.svg" id="lock" height="10%">
       </mat-card-header>
       <mat-card-content>
-      <h4 style="text-align:center; font-weight:bold; margin:0 auto;">Suggestions & Report Bugs</h4></mat-card-content>
+      <h4 style="text-align:center; font-weight:bold; margin:0 auto;">Report Bugs</h4></mat-card-content>
   
   </mat-card>
   <br>
