--- a/Code/PerceptronFrontEnd/src/app/history/history.component.html
+++ b/Code/PerceptronFrontEnd/src/app/history/history.component.html
@@ -1,6 +1,6 @@
 <div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
     <mat-card>
-      <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">User Search History</h4>
+      <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Search Results & History</h4>
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div> 
    <div class="example-container mat-elevation-z8">
