--- a/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
+++ b/Code/PerceptronFrontEnd/src/app/repository/repository.component.html
@@ -2,7 +2,7 @@
 
     <div id="top" style="width:90%; min-width: 600px; margin:0 auto;">
        <mat-card>
-         <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Sample Protein Data</h4>
+         <h4 style="text-align:center; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Sample Data</h4>
        </mat-card>
        <div style="height:10px;font-size:1px;">&nbsp;</div>
        <mat-card>
