--- a/Code/PerceptronFrontEnd/src/app/team/team.component.html
+++ b/Code/PerceptronFrontEnd/src/app/team/team.component.html
@@ -32,7 +32,7 @@
 
     <mat-card>
         <label
-            style="text-align:center; font-size: 23px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Collaborators</label>
+            style="text-align:center; font-size: 23px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Team</label>
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
 
