--- a/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
+++ b/Code/PerceptronFrontEnd/src/app/youtube/youtube.component.html
@@ -1,6 +1,6 @@
 <div id="top" style="width:90%; min-width: 900px; margin:0 auto;">
     <mat-card>
-        <label style="text-align:center; font-size: 23px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Youtube Tutorials</label>
+        <label style="text-align:center; font-size: 23px; font-family: Roboto, Arial, sans-serif; font-weight:bold; margin:0 auto;">Video Tutorials</label>
     </mat-card>
     <div style="height:10px;font-size:1px;">&nbsp;</div>
     <mat-card>
