--- a/Code/PerceptronFrontEnd/src/app/home/home.component.html
+++ b/Code/PerceptronFrontEnd/src/app/home/home.component.html
@@ -19,6 +19,8 @@
     </mat-card>
     
     <br>
+    <div style="padding-left:0px; font-weight: bold ; float:left; font-size: 15px; font-family: roboto, arial, sans-serif; font-style: italic;">This software is freely available for the use of academic and non-commercial purpose</div>
+    <br>
 </div>   
 <!-- Default Statcounter code for Perceptron https://perceptron.lums.edu.pk/ -->
 
