--- a/Code/PerceptronFrontEnd/src/app/team/team.component.html
+++ b/Code/PerceptronFrontEnd/src/app/team/team.component.html
@@ -58,14 +58,14 @@
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/SohailAsifQureshi.png" style="width:200px;height:200px;">   
+                        <img src="assets/images/WIM_VANDERBAUWHEDE.png" style="width:200px;height:200px;">   
                     </div>
                 </mat-grid-tile>
 
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/WIM_VANDERBAUWHEDE.png" style="width:200px;height:200px;">    
+                        <img src="assets/images/FayyazAhmed.png" style="width:200px;height:200px;">    
                     </div>    
                 </mat-grid-tile>
             </mat-grid-list>
@@ -83,12 +83,12 @@
 
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="5">
-                    <p style="text-align:center;"><b>Sohail Asif Qureshi</b><br>Professor, CECOS University of IT and Emerging Sciences</p>
+                    <p style="text-align:center;"><b>Wim Vanderbauwhede</b><br>Professor, University of Glasgow</p>
                 </mat-grid-tile>
 
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="4">
-                    <p style="text-align:center; top:-10px"><b>Wim Vanderbauwhede</b><br>Professor, University of Glasgow</p>
+                    <p style="text-align:center; top:-10px"><b>Fayyaz Ahmed</b><br>Associate Professor, University of Gujrat</p>
                 </mat-grid-tile>
             </mat-grid-list>
 
@@ -96,7 +96,7 @@
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/TayyabMehmood.png" style="width:200px;height:200px;">                           
+                        <img src="assets/images/BilalWajid.png" style="width:200px;height:200px;">                           
                     </div>
                 </mat-grid-tile>
                 <mat-grid-tile colspan="1"></mat-grid-tile>
@@ -105,7 +105,7 @@
             <mat-grid-list cols="17" rowHeight="20px">
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="6">
-                    <p style="text-align:center; vertical-align: text-top;"><b>Tayyab Mehmood</b><br>Assistant Professor, University of Engineering & Technology</p>
+                    <p style="text-align:center; vertical-align: text-top;"><b>Bilal Wajid</b><br>Assistant Professor, University of Engineering & Technology</p>
                 </mat-grid-tile>
             </mat-grid-list>
 
@@ -148,7 +148,7 @@
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/MominaAmerAkhter.jpg" width="200" height="200">
+                        <img src="assets/images/MuhammadAbubakar.jpg" width="200" height="200">
                     </div>
                 </mat-grid-tile>
             </mat-grid-list>
@@ -166,15 +166,42 @@
 
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="5">
-                    <p style="text-align:center;"><b>Amna Ghafoor</b><br>Research Intern, Lahore University of Management Sciences</p>
+                    <p style="text-align:center;"><b>Amna Ghafoor</b><br>Senior Year Project, Lahore University of Management Sciences</p>
                 </mat-grid-tile>
 
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="5">
-                    <p style="text-align:center;"><b>Momina Amer Akhter</b><br>Research Intern, Lahore University of Management Sciences</p>
+                    <p style="text-align:center;"><b>Muhammad Abubakar</b><br>Senior Research Associate, Lahore University of Management Sciences</p>
                 </mat-grid-tile>
             </mat-grid-list>
         </mat-card-content>
+
+
+        <!-- <mat-card-content>
+            <mat-grid-list cols="17" rowHeight="200px">
+                <mat-grid-tile colspan="1"></mat-grid-tile>
+                <mat-grid-tile colspan="3">
+                    <div>
+                        <img src="assets/images/Farhan.jpg" width="200" height="200"> 
+                    </div>
+                </mat-grid-tile>
+
+            </mat-grid-list>
+
+            <mat-grid-list cols="17" rowHeight="20px">
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="3" rowspan="6">
+                    <p style="text-align:center;"><b>Muhammad Farhan Khalid</b><br>Research Associate, Lahore University of Management Sciences</p>
+                </mat-grid-tile>
+            </mat-grid-list> -->
+
+        <!-- </mat-card-content> -->
+        
+
+
+
+
+
     </mat-card>
 
     <div style="height:10px;font-size:1px;">&nbsp;</div>
@@ -193,14 +220,14 @@
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/abdul.jpg" width="200" height="200">
+                        <img src="assets/images/Mujtaba.jpg" width="200" height="200">
                     </div>
                 </mat-grid-tile>
 
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/Mujtaba.jpg" width="200" height="200">    
+                        <img src="assets/images/ahsan.jpg" width="200" height="200">    
                     </div>
                 </mat-grid-tile>
 
@@ -214,7 +241,7 @@
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3">
                     <div>
-                        <img src="assets/images/ahsan.jpg" width="200" height="200"> 
+                        <img src="assets/images/abdul.jpg" width="200" height="200"> 
                     </div>
                 </mat-grid-tile>
                 <mat-grid-tile colspan="1"></mat-grid-tile>
@@ -223,12 +250,12 @@
             <mat-grid-list cols="17" rowHeight="20px">
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="6">
-                    <p style="text-align:center;"><b>Abdul Rehman Basharat</b><br>Research Associate, Lahore University of Management Sciences</p>
+                    <p style="text-align:center;"><b>Mujtaba Saboor</b><br>Senior Year Project, University of Engineering & Technology</p>
                 </mat-grid-tile>
 
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="6">
-                    <p style="text-align:center;"><b>Mujtaba Saboor</b><br>Senior Year Project, University of Engineering & Technology</p>
+                    <p style="text-align:center;"><b>Ahsan Ali</b><br>Senior Year Project, University of Engineering & Technology</p>
                 </mat-grid-tile>
 
                 <mat-grid-tile></mat-grid-tile>
@@ -238,7 +265,7 @@
 
                 <mat-grid-tile></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="6">
-                    <p style="text-align:center;"><b>Muhammad Ahsan Ali</b><br>Senior Year Project, University of Engineering & Technology</p>
+                    <p style="text-align:center;"><b>Abdul Rehman Basharat</b><br>Research Associate, Lahore University of Management Sciences</p>
                 </mat-grid-tile>
             </mat-grid-list>
 
@@ -250,12 +277,27 @@
                         <img src="assets/images/taha.jpg" width="200" height="200">      
                     </div>
                 </mat-grid-tile>
+
+                <mat-grid-tile colspan="1"></mat-grid-tile>
+                <mat-grid-tile colspan="3">
+                    <div>
+                        <img src="assets/images/MominaAmerAkhter.jpg" width="200" height="200">    
+                    </div>
+                </mat-grid-tile>
+
+
+
             </mat-grid-list>
 
             <mat-grid-list cols="17" rowHeight="20px">
                 <mat-grid-tile colspan="1"></mat-grid-tile>
                 <mat-grid-tile colspan="3" rowspan="6">
                     <p style="text-align:center;"><b>Taha Tahir</b><br>Senior Year Project, University of Engineering & Technology</p>
+                </mat-grid-tile>
+
+                <mat-grid-tile></mat-grid-tile>
+                <mat-grid-tile colspan="3" rowspan="6">
+                    <p style="text-align:center;"><b>Momina Amer Akhter</b><br>Research Intern, Lahore University of Management Sciences</p>
                 </mat-grid-tile>
             </mat-grid-list>
 
